[FIX] add --enable-preview to the maven-surefire-plugin